--- a/index.html
+++ b/index.html
@@ -1,4 +1,208 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Activar Billete CTF8</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #0f172a;
+      color: #f8fafc;
+      text-align: center;
+      padding: 30px;
+    }
+    input, button {
+      padding: 10px;
+      margin: 10px;
+      font-size: 16px;
+    }
+    .box {
+      background: #1e293b;
+      padding: 20px;
+      border-radius: 12px;
+      max-width: 400px;
+      margin: auto;
+    }
+  </style>
+  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+</head>
+<body>
+  <div class="box">
+    <h2>🎫 Activar tu Billete CTF8</h2>
+    <p>Ingresa tu código único y conecta tu billetera para recibir tus 28 CTF8.</p>
+    <input type="text" id="codigo" placeholder="Código del billete" /> <br>
+    <button onclick="conectarWallet()">🔗 Conectar Wallet</button>
+    <p id="direccion"></p>
+    <button onclick="activarBillete()">✅ Activar Billete</button>
+    <p id="mensaje"></p>
+  </div>
 
+  <script>
+    let cuenta = "";
+
+    async function conectarWallet() {
+      if (window.ethereum) {
+        const cuentas = await ethereum.request({ method: 'eth_requestAccounts' });
+        cuenta = cuentas[0];
+        document.getElementById("direccion").innerText = "Wallet conectada: " + cuenta;
+      } else {
+        alert("Debes tener MetaMask o Brave Wallet instalada");
+      }
+    }
+
+    function activarBillete() {
+      const codigo = document.getElementById("codigo").value;
+      if (!cuenta || !codigo) {
+        document.getElementById("mensaje").innerText = "Conecta tu wallet e ingresa un código válido";
+        return;
+      }
+
+      document.getElementById("mensaje").innerText = "✅ Billete activado. Tus 28 CTF8 serán enviados en breve.";
+      console.log("Código activado:", codigo);
+      console.log("Wallet:", cuenta);
+
+      // Tú puedes registrar esto manualmente y hacer el envío desde tu wallet admin
+    }
+  </script>
+</body>
+</html><!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Activar Billete CTF8</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #0f172a;
+      color: #f8fafc;
+      text-align: center;
+      padding: 30px;
+    }
+    input, button {
+      padding: 10px;
+      margin: 10px;
+      font-size: 16px;
+    }
+    .box {
+      background: #1e293b;
+      padding: 20px;
+      border-radius: 12px;
+      max-width: 400px;
+      margin: auto;
+    }
+  </style>
+  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+</head>
+<body>
+  <div class="box">
+    <h2>🎫 Activar tu Billete CTF8</h2>
+    <p>Ingresa tu código único y conecta tu billetera para recibir tus 28 CTF8.</p>
+    <input type="text" id="codigo" placeholder="Código del billete" /> <br>
+    <button onclick="conectarWallet()">🔗 Conectar Wallet</button>
+    <p id="direccion"></p>
+    <button onclick="activarBillete()">✅ Activar Billete</button>
+    <p id="mensaje"></p>
+  </div>
+
+  <script>
+    let cuenta = "";
+
+    async function conectarWallet() {
+      if (window.ethereum) {
+        const cuentas = await ethereum.request({ method: 'eth_requestAccounts' });
+        cuenta = cuentas[0];
+        document.getElementById("direccion").innerText = "Wallet conectada: " + cuenta;
+      } else {
+        alert("Debes tener MetaMask o Brave Wallet instalada");
+      }
+    }
+
+    function activarBillete() {
+      const codigo = document.getElementById("codigo").value;
+      if (!cuenta || !codigo) {
+        document.getElementById("mensaje").innerText = "Conecta tu wallet e ingresa un código válido";
+        return;
+      }
+
+      document.getElementById("mensaje").innerText = "✅ Billete activado. Tus 28 CTF8 serán enviados en breve.";
+      console.log("Código activado:", codigo);
+      console.log("Wallet:", cuenta);
+
+      // Tú puedes registrar esto manualmente y hacer el envío desde tu wallet admin
+    }
+  </script>
+</body>
+</html><!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Activar Billete CTF8</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #0f172a;
+      color: #f8fafc;
+      text-align: center;
+      padding: 30px;
+    }
+    input, button {
+      padding: 10px;
+      margin: 10px;
+      font-size: 16px;
+    }
+    .box {
+      background: #1e293b;
+      padding: 20px;
+      border-radius: 12px;
+      max-width: 400px;
+      margin: auto;
+    }
+  </style>
+  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+</head>
+<body>
+  <div class="box">
+    <h2>🎫 Activar tu Billete CTF8</h2>
+    <p>Ingresa tu código único y conecta tu billetera para recibir tus 28 CTF8.</p>
+    <input type="text" id="codigo" placeholder="Código del billete" /> <br>
+    <button onclick="conectarWallet()">🔗 Conectar Wallet</button>
+    <p id="direccion"></p>
+    <button onclick="activarBillete()">✅ Activar Billete</button>
+    <p id="mensaje"></p>
+  </div>
+
+  <script>
+    let cuenta = "";
+
+    async function conectarWallet() {
+      if (window.ethereum) {
+        const cuentas = await ethereum.request({ method: 'eth_requestAccounts' });
+        cuenta = cuentas[0];
+        document.getElementById("direccion").innerText = "Wallet conectada: " + cuenta;
+      } else {
+        alert("Debes tener MetaMask o Brave Wallet instalada");
+      }
+    }
+
+    function activarBillete() {
+      const codigo = document.getElementById("codigo").value;
+      if (!cuenta || !codigo) {
+        document.getElementById("mensaje").innerText = "Conecta tu wallet e ingresa un código válido";
+        return;
+      }
+
+      document.getElementById("mensaje").innerText = "✅ Billete activado. Tus 28 CTF8 serán enviados en breve.";
+      console.log("Código activado:", codigo);
+      console.log("Wallet:", cuenta);
+
+      // Tú puedes registrar esto manualmente y hacer el envío desde tu wallet admin
+   }
+  </script>
+</body>
+</html>
 <!DOCTYPE html>
 <html lang="es">
 <head>
