--- a/index.html
+++ b/index.html
@@ -1,58 +1,68 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Activación CTF8</title>
-  <script src="https://cdn.jsdelivr.net/npm/web3@1.8.2/dist/web3.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Activar Billete CTF8</title>
   <style>
-    body { font-family: sans-serif; background: #f4f4f4; text-align: center; padding: 2em; }
-    .card { background: white; padding: 2em; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); display: inline-block; max-width: 400px; }
-    button { padding: 10px 20px; font-size: 16px; border: none; background: #008cff; color: white; border-radius: 6px; cursor: pointer; }
-    #status { margin-top: 1em; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #0f172a;
+      color: #f8fafc;
+      text-align: center;
+      padding: 30px;
+    }
+    input, button {
+      padding: 10px;
+      margin: 10px;
+      font-size: 16px;
+    }
+    .box {
+      background: #1e293b;
+      padding: 20px;
+      border-radius: 12px;
+      max-width: 400px;
+      margin: auto;
+    }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 </head>
 <body>
-  <div class="card">
-    <h2>Activar Billete CTF8</h2>
-    <p>Conecta tu billetera para activar tu billete.</p>
-    <button onclick="connectWallet()">Conectar Wallet</button>
-    <br><br>
-    <button onclick="activarBillete()">Activar Billete</button>
-    <div id="status"></div>
+  <div class="box">
+    <h2>🎫 Activar tu Billete CTF8</h2>
+    <p>Ingresa tu código único y conecta tu billetera para recibir tus 28 CTF8.</p>
+    <input type="text" id="codigo" placeholder="Código del billete" /> <br>
+    <button onclick="conectarWallet()">🔗 Conectar Wallet</button>
+    <p id="direccion"></p>
+    <button onclick="activarBillete()">✅ Activar Billete</button>
+    <p id="mensaje"></p>
   </div>
 
   <script>
-    const contractAddress = "0xE3f4110D74e51cBD51ca60317E54155c57855F20";
-    const abi = [{"constant":false,"inputs":[{"name":"recipient","type":"address"},{"name":"amount","type":"uint256"}],"name":"transfer","outputs":[{"name":"","type":"bool"}],"type":"function"}];
-    const adminWallet = "0x3156489b2E1bE5066C8aC61EF75f2602F62471C9";
-    let web3;
-    let userAccount;
+    let cuenta = "";
 
-    async function connectWallet() {
+    async function conectarWallet() {
       if (window.ethereum) {
-        web3 = new Web3(window.ethereum);
-        await window.ethereum.request({ method: 'eth_requestAccounts' });
-        const accounts = await web3.eth.getAccounts();
-        userAccount = accounts[0];
-        document.getElementById("status").innerText = "Wallet conectada: " + userAccount;
+        const cuentas = await ethereum.request({ method: 'eth_requestAccounts' });
+        cuenta = cuentas[0];
+        document.getElementById("direccion").innerText = "Wallet conectada: " + cuenta;
       } else {
-        alert("Necesitas MetaMask o Brave Wallet para usar esto.");
+        alert("Debes tener MetaMask o Brave Wallet instalada");
       }
     }
 
-    async function activarBillete() {
-      if (!userAccount) return alert("Primero conecta tu wallet.");
-      const contract = new web3.eth.Contract(abi, contractAddress);
-      try {
-        await contract.methods.transfer(userAccount, 20).send({ from: adminWallet });
-        await contract.methods.transfer(adminWallet, 8).send({ from: adminWallet });
-        document.getElementById("status").innerText = "✅ Activación exitosa. Tus CTF8 llegarán pronto.";
-      } catch (err) {
-        console.error(err);
-        document.getElementById("status").innerText = "❌ Error en la activación. Intenta de nuevo.";
+    function activarBillete() {
+      const codigo = document.getElementById("codigo").value;
+      if (!cuenta || !codigo) {
+        document.getElementById("mensaje").innerText = "Conecta tu wallet e ingresa un código válido";
+        return;
       }
+
+      document.getElementById("mensaje").innerText = "✅ Billete activado. Tus 28 CTF8 serán enviados en breve.";
+      console.log("Código activado:", codigo);
+      console.log("Wallet:", cuenta);
+
+      // Tú puedes registrar esto manualmente y hacer el envío desde tu wallet admin
     }
   </script>
 </body>
