--- a/index.html
+++ b/index.html
@@ -2,10 +2,30 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Activar Billete CTF8</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #0f172a;
+      color: #f8fafc;
+      text-align: center;
+      padding: 30px;
+    }
+    input, button {
+      padding: 10px;
+      margin: 10px;
+      font-size: 16px;
+    }
+    .box {
+      background: #1e293b;
+      padding: 20px;
+      border-radius: 12px;
+      max-width: 400px;
+      margin: auto;
+    }
+  </style>
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 </head>
 <body>
@@ -18,8 +38,10 @@
     <button onclick="activarBillete()">✅ Activar Billete</button>
     <p id="mensaje"></p>
   </div>
+
   <script>
     let cuenta = "";
+
     async function conectarWallet() {
       if (window.ethereum) {
         const cuentas = await ethereum.request({ method: 'eth_requestAccounts' });
@@ -29,13 +51,37 @@
         alert("Debes tener MetaMask o Brave Wallet instalada");
       }
     }
+
     function activarBillete() {
       const codigo = document.getElementById("codigo").value;
       if (!cuenta || !codigo) {
         document.getElementById("mensaje").innerText = "Conecta tu wallet e ingresa un código válido";
         return;
       }
+
       document.getElementById("mensaje").innerText = "✅ Billete activado. Tus 28 CTF8 serán enviados en breve.";
+
+      // Enviar datos a Formspree
+      fetch("https://formspree.io/f/xzzvzwwq", {
+        method: "POST",
+        headers: {
+          'Content-Type': 'application/json',
+          'Accept': 'application/json'
+        },
+        body: JSON.stringify({
+          wallet: cuenta,
+          codigo: codigo
+        })
+      }).then(response => {
+        if (response.ok) {
+          console.log("Correo enviado exitosamente");
+        } else {
+          console.error("Error al enviar el correo");
+        }
+      }).catch(error => {
+        console.error("Error en la solicitud", error);
+      });
+
       console.log("Código activado:", codigo);
       console.log("Wallet:", cuenta);
     }
