--- a/tutorial.html
+++ b/tutorial.html
@@ -22,3 +22,11 @@
   <a href="index.html">Volver</a>
 </body>
 </html>
+<h2>🎥 Tutorial: Cómo importar el token CTF8 en MetaMask</h2>
+<iframe width="100%" height="315"
+  src="https://www.youtube.com/embed/hmMY6LbjhRk"
+  title="Cómo importar token en MetaMask"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen>
+</iframe>
