--- a/tutorial.html
+++ b/tutorial.html
@@ -1,51 +1,56 @@
-
-<!DOCTYPE html>
-
 import React from 'react';
 
-export default function TutorialCTF8() {
+export default function Tutorial() {
   return (
-    <div style={{ padding: '20px', maxWidth: '700px', margin: '0 auto' }}>
-      <h2>🎥 Tutorial: Cómo importar el token CTF8 en MetaMask</h2>
+    <div style={{ padding: '30px', fontFamily: 'sans-serif', maxWidth: '800px', margin: '0 auto' }}>
+      <h1 style={{ color: '#2d3748' }}>🎓 Tutorial: Cómo importar el token CTF8 en MetaMask</h1>
 
-      <iframe
-        width="100%"
-        height="315"
-        src="https://www.youtube.com/embed/hmMY6LbjhRk"
-        title="Cómo importar token en MetaMask"
-        frameBorder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowFullScreen
-      ></iframe>
+      <p style={{ marginBottom: '20px' }}>
+        Aprende paso a paso cómo importar tu token CTF8 usando la app MetaMask desde tu celular.
+      </p>
 
-      <h3 style={{ marginTop: '30px' }}>📄 Instrucciones en PDF</h3>
+      <div style={{ marginBottom: '40px' }}>
+        <iframe
+          width="100%"
+          height="315"
+          src="https://www.youtube.com/embed/hmMY6LbjhRk"
+          title="Cómo importar token en MetaMask"
+          frameBorder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowFullScreen
+        ></iframe>
+      </div>
+
+      <h2 style={{ color: '#2b6cb0' }}>📄 Descarga el manual en PDF</h2>
       <p>Puedes descargar el manual paso a paso en formato PDF aquí:</p>
       <a
         href="/manual-importar-ctf8.pdf"
         download
         style={{
           display: 'inline-block',
-          backgroundColor: '#0088cc',
+          backgroundColor: '#3182ce',
           color: 'white',
-          padding: '10px 20px',
+          padding: '12px 24px',
           borderRadius: '8px',
           textDecoration: 'none',
-          fontWeight: 'bold'
+          fontWeight: 'bold',
+          marginTop: '10px',
         }}
       >
-        Descargar PDF
+        📥 Descargar PDF
       </a>
 
-      <h3 style={{ marginTop: '30px' }}>🔗 Contrato del token CTF8</h3>
-      <p>Este es el contrato oficial que debes copiar para importar el token:</p>
+      <h2 style={{ marginTop: '40px', color: '#2b6cb0' }}>🔗 Contrato oficial del token CTF8</h2>
+      <p>Copia este contrato para importar el token en MetaMask:</p>
       <code
         style={{
+          backgroundColor: '#edf2f7',
+          padding: '12px',
+          borderRadius: '6px',
           display: 'block',
-          backgroundColor: '#f5f5f5',
-          padding: '10px',
-          borderRadius: '5px',
+          fontSize: '16px',
           wordBreak: 'break-all',
-          fontSize: '16px'
+          marginTop: '10px'
         }}
       >
         0xE3f4110D74e51cBD51ca60317E54155c57855F20
@@ -56,13 +61,14 @@ export default function TutorialCTF8() {
         target="_blank"
         rel="noopener noreferrer"
         style={{
-          marginTop: '10px',
           display: 'inline-block',
-          color: '#007bff',
+          marginTop: '12px',
+          color: '#2b6cb0',
+          fontWeight: 'bold',
           textDecoration: 'underline'
         }}
       >
-        Ver en BscScan
+        🌐 Ver en BscScan
       </a>
     </div>
   );
