--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="box">
-    <h2>🎫 Activar Billete CTF8</h2>
+    <h2>🎫 Activar moneda CTF8</h2>
     <p>Ingresa tu código y conecta tu wallet:</p>
     <input type="text" id="codigo" placeholder="Código del billete"/><br/>
     <button onclick="conectarWallet()">🔗 Conectar Wallet</button><br/>
