Enhance panel styling with background image
Updated the styling of the panel with a background image and adjusted box transparency.

--- a/panel.html
+++ b/panel.html
@@ -5,11 +5,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Panel de Usuario CTF8</title>
-  <style>
-    body { font-family: Arial; background: #0f172a; color: white; text-align: center; padding: 20px; }
-    .box { background: #1e293b; padding: 20px; border-radius: 10px; margin: auto; max-width: 400px; }
-    input, button { padding: 10px; margin: 5px; width: 80%; }
-    a { color: #38bdf8; display: block; margin-top: 20px; }
+  <style> body {
+    font-family: Arial;
+    background-image: url('img/file_000000008a8071f5b63d2554060b50ce.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+    text-align: center;
+    padding: 20px;
+  }
+
+  .box {
+    background: rgba(30, 41, 59, 0.85);
+    padding: 20px;
+    border-radius: 10px;
+    margin: auto;
+    max-width: 400px;
+  }
+
+  input, button {
+    padding: 10px;
+    margin: 5px;
+    width: 80%;
+  }
+
+  a {
+    color: #38bdf8;
+    display: block;
+    margin-top: 20px;
+  }
+</style>
   </style>
 </head>
 <body>
