Add styles for body and download button
Added custom styles for body and box elements.

--- a/tutorial.html
+++ b/tutorial.html
@@ -26,15 +26,38 @@ export default function Tutorial() {
       <a
         href="/manual-importar-ctf8.pdf"
         download
-        style={{
-          display: 'inline-block',
-          backgroundColor: '#3182ce',
-          color: 'white',
-          padding: '12px 24px',
-          borderRadius: '8px',
-          textDecoration: 'none',
-          fontWeight: 'bold',
-          marginTop: '10px',
+        <style>
+  body {
+    font-family: Arial;
+    background-image: url('img/file_000000008a8071f5b63d2554060b50ce.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+    text-align: center;
+    padding: 20px;
+  }
+
+  .box {
+    background: rgba(30, 41, 59, 0.85);
+    padding: 20px;
+    border-radius: 10px;
+    margin: auto;
+    max-width: 400px;
+  }
+
+  input, button {
+    padding: 10px;
+    margin: 5px;
+    width: 80%;
+  }
+
+  a {
+    color: #38bdf8;
+    display: block;
+    margin-top: 20px;
+  }
+      </style>
         }}
       >
         📥 Descargar PDF
