Fix style block in tutorial.html
Removed incorrect style block and adjusted formatting.

--- a/tutorial.html
+++ b/tutorial.html
@@ -26,8 +26,7 @@ export default function Tutorial() {
       <a
         href="/manual-importar-ctf8.pdf"
         download
-        <style>
-  body {
+        <style> body }
     font-family: Arial;
     background-image: url('img/file_000000008a8071f5b63d2554060b50ce.png');
     background-size: cover;
